Closed Bug 1037626 Opened 10 years ago Closed 10 years ago

H.264 SDP code doesn't find the correct fmtp value when negotiating if only mode 1 is supported

Categories

(Core :: WebRTC: Signaling, defect)

33 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33
blocking-b2g 2.0+
Tracking Status
firefox31 --- wontfix
firefox32 --- fixed
firefox33 --- fixed
b2g-v2.0 --- fixed
b2g-v2.1 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

This patch both turns off mode 0 (since we don't actually support it yet), and fixes a bug when an offer you're making an answer to only has mode 1 (it was failing to find the right fmtp entry when checking the packetization-mode value). We'll want to uplift this to Aurora/32/2.0 so it can respond correctly to offers with mode 1 only (which is what we will generate).
Attachment #8454651 - Flags: review?(ethanhugg)
Comment on attachment 8454651 [details] [diff] [review] H.264 mode 1-only support Review of attachment 8454651 [details] [diff] [review]: ----------------------------------------------------------------- lgtm
Attachment #8454651 - Flags: review?(ethanhugg) → review+
We need this for 2.0 - first, we're offering mode 0 and don't actually support it. Second, if offered h.264 mode-1 only, it would fail to connect video at all (and with this on inbound, we will only offer mode 1 from desktop). It can be tested with http://mozilla.github.com/webrtc-landing/pc_test_h264.html
blocking-b2g: 2.0? → 2.0+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Whiteboard: [webrtc-uplift]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: