Bug 1037626 - Support Webrtc H.264 offers with only packetization mode 1. r=ehugg, a=2.0+