media/webrtc/signaling/src/sipcc/include/vcm.h
@@ -66,6 +66,11 @@
 #define VCM_DSP_FULLDUPLEX_HW 4 // HW codecs
 #define VCM_DSP_FULLDUPLEX_GMP 5 // GMP-loaded codecs
 
+// Bitmasks for vcmGetH264SupportedPacketizationMode()
+#define VCM_H264_MODE_0     1
+#define VCM_H264_MODE_1     2
+#define VCM_H264_MODE_2     4
+
 #define CC_KFACTOR_STAT_LEN   (256)
 
 /* Should be enough for any reasonable use-case */
@@ -881,11 +886,12 @@ int vcmGetAudioCodecList(int request_type);
 int vcmGetVideoCodecList(int request_type);
 
 /**
- * Get max supported H.264 video packetization mode.
- * @return maximum supported video packetization mode for H.264. Value returned
- * must be 0 or 1. Value 2 is not supported yet.
+ * Get supported H.264 video packetization modes
+ * @return mask of supported video packetization modes for H.264. Value returned
+ * must be 1 to 3 (bit 0 is mode 0, bit 1 is mode 1.
+ * Bit 2 (Mode 2) is not supported yet.
  */
-int vcmGetVideoMaxSupportedPacketizationMode();
+int vcmGetH264SupportedPacketizationModes();
 
 /**
  * Get supported H.264 profile-level-id
